--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Orlandi </title>
+  <title>Orlandi Gianluca </title>
   </head>
   <body>
     <h1>Sito ufficiale di Orlandi Gianluca<h1>
